tests/paczka1/fuzzy1/61024984.err
Error in line 2: OCj A480 86,0
Error in line 1: OI4ot5 A480 0,5
Error in line 15: OI4ot5 A480 83,1
Error in line 29: FxMFEOpvg A478 20,7
